:bug: Fix intro height on mobile devices

--- a/css/opening.css
+++ b/css/opening.css
@@ -1,6 +1,7 @@
 .opening {
     background-color: black;
     z-index: 1000;
+    overflow: hidden;
 }
 
 .wake_up {
